--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "private": true,
   "dependencies": {
     "@tensorflow/tfjs": "^1.0.0",
-    "phaser": "^3.17.0",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "phaser": "^3.17.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "copy-webpack-plugin": "^5.0.3",
+    "eslint": "^6.0.1",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
+    "lint": "eslint --fix --ext .ts src",
     "test": "jest",
     "debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
@@ -28,6 +32,6 @@
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
-  "author": "",
+  "author": "Emanuele Sabellico",
   "license": "ISC"
 }
